Fix css nav-brand et .collapse

--- a/nav.css
+++ b/nav.css
@@ -64,9 +64,9 @@
     background-color: rgb(248, 248, 248) !important;
 }
 
-/*#framanav.navbar .collapse {
+#framanav.navbar .collapse {
     height:40px !important;
-}*/
+}
 
 #framanav img {margin:0}
 
@@ -138,8 +138,9 @@ a#framanav_donation:hover {filter:alpha(opacity=80);-moz-opacity:0.8;-khtml-opac
 
 #framanav .navbar-brand {
     font-weight: bold;
-    padding-left:50px;
     height: 40px;
+    padding:0 0 0 50px;
+    line-height:40px;
 }
 
 #framanav .nav-brand img {border:none;}
